--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,34 +1,30 @@
-name: Search tests
+name: Reusable Test Workflow
 
 on:
-  push:
-    branches:
-        - dev
-        - main
-  pull_request:
-    branches:
-        - dev
-        - main
+  workflow_call:
+    inputs:
+      test-path:
+        description: "Path to the test folder for this project"
+        required: true
+        type: string
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"   # or the version you use
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || true
           pip install pytest
 
-      - name: Run tests
-        run: |
-          pytest tests
+      - name: Run pytest
+        run: pytest ${{ inputs.test-path }}
